# matto

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: ConfigureVcpkg.cmake
include/matto/: fen.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/matto/: CMakeLists.txt  fen.cpp
